fixed mobile search bar not detected due to z index and fixed some spacing between characters

--- a/docs/src/index.css
+++ b/docs/src/index.css
@@ -49,7 +49,7 @@
 
 /* Hover state with laser-like intense shadow */
 .Char-Card:hover,
-.Char-Card:hover .hex-img {
+.Char-Card:hover .hexagon {
 	filter: drop-shadow(0px 2px 5px rgba(6, 176, 233, 0.8)) /* Small laser glow */
 		drop-shadow(0px 4px 8px rgba(6, 176, 233, 0.8)); /* Outer glow for laser effect */
 	transition: filter 0.3s ease;
